first page done

--- a/index.html
+++ b/index.html
@@ -3,16 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="style.css" />
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
     <title>Dropbox</title>
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   </head>
   <body>
     <nav>
@@ -22,8 +19,8 @@
           <p>Dropbox</p>
         </div>
         <ul class="flex-list-1">
-          <li>Products</li>
-          <li>Solutions</li>
+          <li>Products <i class="fa-duotone fa-solid fa-caret-down"></i></li>
+          <li>Solutions <i class="fa-duotone fa-solid fa-caret-down"></i></li>
           <li>Enterprise</li>
           <li>Pricing</li>
         </ul>
@@ -31,7 +28,7 @@
 
       <div class="right-nav">
         <ul class="flex-list-2">
-          <li><i class="fa-light fa-globe"> </i></li>
+          <li><i class="fa-solid fa-globe"></i></li>
           <li><a href="">Contact sales </a></li>
           <li><a href=""> Get app</a></li>
           <li><a href=""> Sign up</a></li>
@@ -53,10 +50,10 @@
 
       <div class="container-flex">
         <div class="button">
-          <button class="sign-up">Sign up free &nbsp &nbsp &#8594;</button>
+          <button class="sign-up">Sign up free &nbsp &nbsp <i class="fa-solid fa-arrow-right"></i></button>
           <p>No credit card required.</p>
         </div>
-        <a href=""> <u> Find your plan </u> &#8594; </a>
+        <a href=""> <u> Find your plan </u> <i class="fa-solid fa-arrow-right"></i> </a>
       </div>
     </main>
   </body>
