--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="style.css" />
 
     <title>Dropbox</title>
-    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <nav>
@@ -29,11 +34,11 @@
       <div class="right-nav">
         <ul class="flex-list-2">
           <li><i class="fa-solid fa-globe"></i></li>
-          <li><a href="">Contact sales </a></li>
-          <li><a href=""> Get app</a></li>
-          <li><a href=""> Sign up</a></li>
-          <li><a href=""> Log in </a></li>
-          <li><button>Get started</button></li>
+          <li><a class="nav-link" href="">Contact sales </a></li>
+          <li><a class="nav-link2" href=""> Get app</a></li>
+          <li><a class="nav-link3" href=""> Sign up</a></li>
+          <li><a class="nav-link4" href=""> Log in </a></li>
+          <li><button>Light Mode</button></li>
         </ul>
       </div>
     </nav>
@@ -41,20 +46,25 @@
     <main>
       <div class="container-grid">
         <h1>Get to work, with a lot less work</h1>
-        <p>
+        <p class="pText">
           Dropbox delivers tools that help you move your work forward faster,
           keep it safe, and
         </p>
-        <p>let you collaborate with ease.</p>
+        <p class="pText2">let you collaborate with ease.</p>
       </div>
 
       <div class="container-flex">
         <div class="button">
-          <button class="sign-up">Sign up free &nbsp &nbsp <i class="fa-solid fa-arrow-right"></i></button>
-          <p>No credit card required.</p>
+          <button class="sign-up">
+            Sign up free &nbsp &nbsp <i class="fa-solid fa-arrow-right"></i>
+          </button>
+          <p class="buttonP">No credit card required.</p>
         </div>
-        <a href=""> <u> Find your plan </u> <i class="fa-solid fa-arrow-right"></i> </a>
+        <a class="findplan" href="">
+          <u> Find your plan </u> <i class="fa-solid fa-arrow-right"></i>
+        </a>
       </div>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
